--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@metaplex-foundation/js": "^0.17.2",
+    "@metaplex-foundation/mpl-token-metadata": "^2.3.3",
+    "@solana-mobile/wallet-adapter-mobile": "^0.9.6",
+    "@solana/spl-token": "^0.3.5",
+    "@solana/wallet-adapter-base": "^0.9.18",
+    "@solana/wallet-adapter-react": "^0.15.20",
+    "@solana/wallet-adapter-react-ui": "^0.9.18",
+    "@solana/wallet-adapter-wallets": "^0.19.2",
+    "@solana/web3.js": "^1.66.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,17 +20,27 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.12",
+    "crypto-browserify": "^3.12.0",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.2.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "util": "^0.12.5",
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -30,9 +50,11 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
