--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.12",
     "crypto-browserify": "^3.12.0",
     "postcss": "^8.4.18",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
@@ -32,7 +33,6 @@
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.4.2",
-    "util": "^0.12.5",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
